Updated Register for add Writers and Readers
