# app/Models/Writerprofile.php
@@ -8,4 +8,8 @@ use Illuminate\Database\Eloquent\Model;
 class Writerprofile extends Model
 {
     use HasFactory;
+
+    protected $fillable = [
+        'user_id', 'nickname', 'principal_gender', 'description', 'birth_date', 'status'
+    ];
 }
